LIST OF CHANGES

release 92.5.0
 - Fixed instrument name check.
 - Fixed the problem in the script that generates the Illumina instruments
   uptime report. A few month ago the lab stopped recording the washing
   cycle. As a consequence, statuses of some instruments do not get updated
   for many months. The instruments with no status within the report period
   were excluded from the report.
 - Simplify directory view for Tileviz data.

release 92.4.0
 - Staging area daemon - when the folder name is not in the database,
   prior to updating the database check that for the given run id:
      1. the current run status is "run pending",
      2. the instrument name is consistent between the database record
         and the RunInfo.xml file.
 - Switched the default st::api::lims driver from xml to samplesheet.
   Fixed tests, which implicitly relied on the xml driver being the default.
   Some tests used the default driver type. For those tests either test
   samplesheets were generated and used as a source of LIMS data or the
   driver type was explicitly set as 'xml'.
 - In samplesheet generation (npg::samplesheet) explicitly set the default
   st::api::lims driver to xml. This driver was previously used implicitly.
 - Apache https config:
     redirected all non-SSL requests to a port with enabled SSL
     removed provisions for self-compiled httpd server.

release 92.3.1
 - A WHILE loop in run_list.tt2 iterates over a number of pages (40 runs
   per page) in a visual listing of runs. The number of pages is now
   (January 2022) sufficiently high to trigger an error in Template Toolkit,
   which, by default, allows 1000 iterations only. The value of
   $Template::Directive::WHILE_MAX variable is, therefore, set to 2000.

release 92.3.0
 - New link in sigularity image to pass npg_tracking configuration file.
 - Removed ability of the tracking server to provide directory views of
   visible to the server /nfs partitions since nfs staging servers are