@@ -1,0 +1,337 @@
+<?xml version="1.0" encoding="utf-8"?>
+<RunInfo Version="5">
+	<Run Id="220714_A00950_0605_AH3J7TDRX2" Number="605">
+		<Flowcell>H3J7TDRX2</Flowcell>
+		<Instrument>A00950</Instrument>
+		<Date>7/14/2022 10:33:36 AM</Date>
+		<Reads>
+			<Read Number="1" NumCycles="300" IsIndexedRead="N"/>
+			<Read Number="2" NumCycles="8" IsIndexedRead="Y"/>
+			<Read Number="3" NumCycles="8" IsIndexedRead="Y"/>
+		</Reads>
+		<FlowcellLayout LaneCount="2" SurfaceCount="2" SwathCount="2" TileCount="78" FlowcellSide="1">
+			<TileSet TileNamingConvention="FourDigit">
+				<Tiles>
+					<Tile>1_2101</Tile>
+					<Tile>1_2102</Tile>
+					<Tile>1_2103</Tile>
+					<Tile>1_2104</Tile>
+					<Tile>1_2105</Tile>
+					<Tile>1_2106</Tile>
+					<Tile>1_2107</Tile>
+					<Tile>1_2108</Tile>
+					<Tile>1_2109</Tile>
+					<Tile>1_2110</Tile>
+					<Tile>1_2111</Tile>
+					<Tile>1_2112</Tile>
+					<Tile>1_2113</Tile>
+					<Tile>1_2114</Tile>
+					<Tile>1_2115</Tile>
+					<Tile>1_2116</Tile>
+					<Tile>1_2117</Tile>
+					<Tile>1_2118</Tile>
+					<Tile>1_2119</Tile>
+					<Tile>1_2120</Tile>
+					<Tile>1_2121</Tile>
+					<Tile>1_2122</Tile>
+					<Tile>1_2123</Tile>
+					<Tile>1_2124</Tile>
+					<Tile>1_2125</Tile>
+					<Tile>1_2126</Tile>
+					<Tile>1_2127</Tile>
+					<Tile>1_2128</Tile>
+					<Tile>1_2129</Tile>
+					<Tile>1_2130</Tile>
+					<Tile>1_2131</Tile>
+					<Tile>1_2132</Tile>
+					<Tile>1_2133</Tile>
+					<Tile>1_2134</Tile>
+					<Tile>1_2135</Tile>
+					<Tile>1_2136</Tile>
+					<Tile>1_2137</Tile>
+					<Tile>1_2138</Tile>
+					<Tile>1_2139</Tile>
+					<Tile>1_2140</Tile>
+					<Tile>1_2141</Tile>
+					<Tile>1_2142</Tile>
+					<Tile>1_2143</Tile>
+					<Tile>1_2144</Tile>
+					<Tile>1_2145</Tile>
+					<Tile>1_2146</Tile>
+					<Tile>1_2147</Tile>
+					<Tile>1_2148</Tile>
+					<Tile>1_2149</Tile>
+					<Tile>1_2150</Tile>
+					<Tile>1_2151</Tile>
+					<Tile>1_2152</Tile>
+					<Tile>1_2153</Tile>
+					<Tile>1_2154</Tile>
+					<Tile>1_2155</Tile>
+					<Tile>1_2156</Tile>
+					<Tile>1_2157</Tile>
+					<Tile>1_2158</Tile>
+					<Tile>1_2159</Tile>
+					<Tile>1_2160</Tile>
+					<Tile>1_2161</Tile>
+					<Tile>1_2162</Tile>
+					<Tile>1_2163</Tile>
+					<Tile>1_2164</Tile>
+					<Tile>1_2165</Tile>
+					<Tile>1_2166</Tile>
+					<Tile>1_2167</Tile>
+					<Tile>1_2168</Tile>
+					<Tile>1_2169</Tile>
+					<Tile>1_2170</Tile>
+					<Tile>1_2171</Tile>
+					<Tile>1_2172</Tile>
+					<Tile>1_2173</Tile>
+					<Tile>1_2174</Tile>
+					<Tile>1_2175</Tile>
+					<Tile>1_2176</Tile>
+					<Tile>1_2177</Tile>
+					<Tile>1_2178</Tile>
+					<Tile>1_2201</Tile>
+					<Tile>1_2202</Tile>
+					<Tile>1_2203</Tile>
+					<Tile>1_2204</Tile>
+					<Tile>1_2205</Tile>
+					<Tile>1_2206</Tile>
+					<Tile>1_2207</Tile>
+					<Tile>1_2208</Tile>
+					<Tile>1_2209</Tile>
+					<Tile>1_2210</Tile>
+					<Tile>1_2211</Tile>
+					<Tile>1_2212</Tile>
+					<Tile>1_2213</Tile>
+					<Tile>1_2214</Tile>
+					<Tile>1_2215</Tile>
+					<Tile>1_2216</Tile>
+					<Tile>1_2217</Tile>
+					<Tile>1_2218</Tile>
+					<Tile>1_2219</Tile>
+					<Tile>1_2220</Tile>
+					<Tile>1_2221</Tile>
+					<Tile>1_2222</Tile>
+					<Tile>1_2223</Tile>
+					<Tile>1_2224</Tile>
+					<Tile>1_2225</Tile>
+					<Tile>1_2226</Tile>
+					<Tile>1_2227</Tile>
+					<Tile>1_2228</Tile>
+					<Tile>1_2229</Tile>
+					<Tile>1_2230</Tile>
+					<Tile>1_2231</Tile>
+					<Tile>1_2232</Tile>
+					<Tile>1_2233</Tile>
+					<Tile>1_2234</Tile>
+					<Tile>1_2235</Tile>
+					<Tile>1_2236</Tile>
+					<Tile>1_2237</Tile>
+					<Tile>1_2238</Tile>
+					<Tile>1_2239</Tile>
+					<Tile>1_2240</Tile>
+					<Tile>1_2241</Tile>
+					<Tile>1_2242</Tile>
+					<Tile>1_2243</Tile>
+					<Tile>1_2244</Tile>
+					<Tile>1_2245</Tile>
+					<Tile>1_2246</Tile>
+					<Tile>1_2247</Tile>
+					<Tile>1_2248</Tile>
+					<Tile>1_2249</Tile>
+					<Tile>1_2250</Tile>
+					<Tile>1_2251</Tile>
+					<Tile>1_2252</Tile>
+					<Tile>1_2253</Tile>
+					<Tile>1_2254</Tile>
+					<Tile>1_2255</Tile>
+					<Tile>1_2256</Tile>
+					<Tile>1_2257</Tile>
+					<Tile>1_2258</Tile>
+					<Tile>1_2259</Tile>
+					<Tile>1_2260</Tile>
+					<Tile>1_2261</Tile>
+					<Tile>1_2262</Tile>
+					<Tile>1_2263</Tile>
+					<Tile>1_2264</Tile>
+					<Tile>1_2265</Tile>
+					<Tile>1_2266</Tile>
+					<Tile>1_2267</Tile>
+					<Tile>1_2268</Tile>
+					<Tile>1_2269</Tile>
+					<Tile>1_2270</Tile>
+					<Tile>1_2271</Tile>
+					<Tile>1_2272</Tile>
+					<Tile>1_2273</Tile>
+					<Tile>1_2274</Tile>
+					<Tile>1_2275</Tile>
+					<Tile>1_2276</Tile>
+					<Tile>1_2277</Tile>
+					<Tile>1_2278</Tile>
+					<Tile>2_2101</Tile>
+					<Tile>2_2102</Tile>
+					<Tile>2_2103</Tile>
+					<Tile>2_2104</Tile>
+					<Tile>2_2105</Tile>
+					<Tile>2_2106</Tile>
+					<Tile>2_2107</Tile>
+					<Tile>2_2108</Tile>
+					<Tile>2_2109</Tile>
+					<Tile>2_2110</Tile>
+					<Tile>2_2111</Tile>
+					<Tile>2_2112</Tile>
+					<Tile>2_2113</Tile>
+					<Tile>2_2114</Tile>
+					<Tile>2_2115</Tile>
+					<Tile>2_2116</Tile>
+					<Tile>2_2117</Tile>
+					<Tile>2_2118</Tile>
+					<Tile>2_2119</Tile>
+					<Tile>2_2120</Tile>
+					<Tile>2_2121</Tile>
+					<Tile>2_2122</Tile>
+					<Tile>2_2123</Tile>
+					<Tile>2_2124</Tile>
+					<Tile>2_2125</Tile>
+					<Tile>2_2126</Tile>
+					<Tile>2_2127</Tile>
+					<Tile>2_2128</Tile>
+					<Tile>2_2129</Tile>
+					<Tile>2_2130</Tile>
+					<Tile>2_2131</Tile>
+					<Tile>2_2132</Tile>
+					<Tile>2_2133</Tile>
+					<Tile>2_2134</Tile>
+					<Tile>2_2135</Tile>
+					<Tile>2_2136</Tile>
+					<Tile>2_2137</Tile>
+					<Tile>2_2138</Tile>
+					<Tile>2_2139</Tile>
+					<Tile>2_2140</Tile>
+					<Tile>2_2141</Tile>
+					<Tile>2_2142</Tile>
+					<Tile>2_2143</Tile>
+					<Tile>2_2144</Tile>
+					<Tile>2_2145</Tile>
+					<Tile>2_2146</Tile>
+					<Tile>2_2147</Tile>
+					<Tile>2_2148</Tile>
+					<Tile>2_2149</Tile>
+					<Tile>2_2150</Tile>
+					<Tile>2_2151</Tile>
+					<Tile>2_2152</Tile>
+					<Tile>2_2153</Tile>
+					<Tile>2_2154</Tile>
+					<Tile>2_2155</Tile>
+					<Tile>2_2156</Tile>
+					<Tile>2_2157</Tile>
+					<Tile>2_2158</Tile>
+					<Tile>2_2159</Tile>
+					<Tile>2_2160</Tile>
+					<Tile>2_2161</Tile>
+					<Tile>2_2162</Tile>
+					<Tile>2_2163</Tile>
+					<Tile>2_2164</Tile>
+					<Tile>2_2165</Tile>
+					<Tile>2_2166</Tile>
+					<Tile>2_2167</Tile>
+					<Tile>2_2168</Tile>
+					<Tile>2_2169</Tile>
+					<Tile>2_2170</Tile>
+					<Tile>2_2171</Tile>
+					<Tile>2_2172</Tile>
+					<Tile>2_2173</Tile>
+					<Tile>2_2174</Tile>
+					<Tile>2_2175</Tile>
+					<Tile>2_2176</Tile>
+					<Tile>2_2177</Tile>
+					<Tile>2_2178</Tile>
+					<Tile>2_2201</Tile>
+					<Tile>2_2202</Tile>
+					<Tile>2_2203</Tile>
+					<Tile>2_2204</Tile>
+					<Tile>2_2205</Tile>
+					<Tile>2_2206</Tile>
+					<Tile>2_2207</Tile>
+					<Tile>2_2208</Tile>
+					<Tile>2_2209</Tile>
+					<Tile>2_2210</Tile>
+					<Tile>2_2211</Tile>
+					<Tile>2_2212</Tile>
+					<Tile>2_2213</Tile>
+					<Tile>2_2214</Tile>
+					<Tile>2_2215</Tile>
+					<Tile>2_2216</Tile>
+					<Tile>2_2217</Tile>
+					<Tile>2_2218</Tile>
+					<Tile>2_2219</Tile>
+					<Tile>2_2220</Tile>
+					<Tile>2_2221</Tile>
+					<Tile>2_2222</Tile>
+					<Tile>2_2223</Tile>
+					<Tile>2_2224</Tile>
+					<Tile>2_2225</Tile>
+					<Tile>2_2226</Tile>
+					<Tile>2_2227</Tile>
+					<Tile>2_2228</Tile>
+					<Tile>2_2229</Tile>
+					<Tile>2_2230</Tile>
+					<Tile>2_2231</Tile>
+					<Tile>2_2232</Tile>
+					<Tile>2_2233</Tile>
+					<Tile>2_2234</Tile>
+					<Tile>2_2235</Tile>
+					<Tile>2_2236</Tile>
+					<Tile>2_2237</Tile>
+					<Tile>2_2238</Tile>
+					<Tile>2_2239</Tile>
+					<Tile>2_2240</Tile>
+					<Tile>2_2241</Tile>
+					<Tile>2_2242</Tile>
+					<Tile>2_2243</Tile>
+					<Tile>2_2244</Tile>
+					<Tile>2_2245</Tile>
+					<Tile>2_2246</Tile>
+					<Tile>2_2247</Tile>
+					<Tile>2_2248</Tile>
+					<Tile>2_2249</Tile>
+					<Tile>2_2250</Tile>
+					<Tile>2_2251</Tile>
+					<Tile>2_2252</Tile>
+					<Tile>2_2253</Tile>
+					<Tile>2_2254</Tile>
+					<Tile>2_2255</Tile>
+					<Tile>2_2256</Tile>
+					<Tile>2_2257</Tile>
+					<Tile>2_2258</Tile>
+					<Tile>2_2259</Tile>
+					<Tile>2_2260</Tile>
+					<Tile>2_2261</Tile>
+					<Tile>2_2262</Tile>
+					<Tile>2_2263</Tile>
+					<Tile>2_2264</Tile>
+					<Tile>2_2265</Tile>
+					<Tile>2_2266</Tile>
+					<Tile>2_2267</Tile>
+					<Tile>2_2268</Tile>
+					<Tile>2_2269</Tile>
+					<Tile>2_2270</Tile>
+					<Tile>2_2271</Tile>
+					<Tile>2_2272</Tile>
+					<Tile>2_2273</Tile>
+					<Tile>2_2274</Tile>
+					<Tile>2_2275</Tile>
+					<Tile>2_2276</Tile>
+					<Tile>2_2277</Tile>
+					<Tile>2_2278</Tile>
+				</Tiles>
+			</TileSet>
+		</FlowcellLayout>
+		<AlignToPhiX/>
+		<ImageDimensions Width="3200" Height="3607"/>
+		<ImageChannels>
+			<Name>RED</Name>
+			<Name>GREEN</Name>
+		</ImageChannels>
+	</Run>
+</RunInfo>
