@@ -1,5 +1,7 @@
 LIST OF CHANGES
 
+ - modified is_i5opposite for NovaSeq v1.5 single-end runs
+
 release 92.5.0
  - Fixed instrument name check.
  - Fixed the problem in the script that generates the Illumina instruments
